# CleanQuery_AI

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
app/: config.py  database.py  main.py
app/llm/: client.py  prompts.py  response_models.py
app/models/: __init__.py  base.py  dataset.py  lineage.py  query_log.py
app/routers/: anomaly.py  cleanse.py  ingestion.py  query.py
app/schemas/: anomaly.py  ingestion.py  query.py
app/services/: anomaly_detector.py  data_analyzer.py  ingestion.py  nl_query.py  report_generator.py  schema_mapper.py  self_healer.py
app/utils/: file_parser.py  type_detector.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/pages/: Audit.tsx  BestPractices.tsx  Pipeline.tsx  Query.tsx  Upload.tsx
frontend/src/types/: index.ts
tests/: conftest.py
tests/fixtures/: messy_ecommerce.csv  messy_sales.csv  nested_api_response.json
tests/unit/: test_file_parser.py  test_nl_query.py  test_type_detector.py
